# ego-world-sub-jepa

./: .gitignore  POSTMORTEM.md  README.md  pyproject.toml  requirements-results.txt  requirements.txt
configs/: diagnose.yaml  eval.yaml  hydra.yaml  probe.yaml  train.yaml
configs/data/: ogbench_cube.yaml  pusht.yaml  pusht_96.yaml
configs/model/: factored.yaml  factored_cov.yaml  factored_hires.yaml  monolithic.yaml  monolithic_cov.yaml  monolithic_hires.yaml
docs/: REPORT.md
ewjepa/: __init__.py  data.py  detector.py  diagnostics.py  encoders.py  model.py  mpc_policy.py  planning.py  predictor.py  probing.py  sigreg.py  train_utils.py  utils.py
results/: .gitkeep  SCHEMA.md  manifest.json
results/detector/: shared_pusht96_seed0.json
results/diagnostics/: pusht_hires_seed0.json  pusht_monolithic_hires_seed0.json
results/eval/: eval_pusht_hires_seed0_mppi.json  (+4 more)
scripts/: aggregate_grid.py  check_cost_variance.py  collect_data.py  copy_results.py  diagnose.py  evaluate.py  pipeline_common.sh  pipeline_long.sh  pipeline_medium.sh  pipeline_short.sh  plot_results.py  probe.py  probe_perfactor.py  record_video.py  reproduce.sh  reproduce_full_comparison.sh  reproduce_planning.sh  reproduce_probes.sh  run_grid.sh  run_seeds.sh  smoke_eval.py  train.py  train_detector.py
tests/: test_cov_loss.py  test_detector.py  test_diagnostics.py  test_eval_smoke.py  test_gradient_isolation.py  test_hermite.py  test_mpc_policy.py  test_planning.py  test_probing.py  test_record_video.py  test_results_schema.py  test_shapes.py  test_sigreg.py  test_train_speed.py
(+43 files in other folders)
