[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "ewjepa"
version = "0.1.0"
description = "Factorized Ego-World latent world models (JEPA-style) for robust, low-compute planning."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Ego-World JEPA authors" }]
dependencies = [
    "torch>=2.4",
    "numpy>=1.24",
]

# Extras keep the core library dependency-light. Everything needed to reproduce
# training/evaluation (Hydra, W&B, stable-worldmodel) lives under [experiments].
[project.optional-dependencies]
experiments = [
    "hydra-core>=1.3",
    "omegaconf>=2.3",
    "wandb>=0.16",
    "stable-worldmodel>=0.1",
    "tqdm>=4.66",
    "matplotlib>=3.7",
    "scikit-learn>=1.3",
    "opencv-python-headless>=4.8",
    "imageio>=2.31",
    "lancedb>=0.6",
    "pyarrow>=14.0",
    "pygame>=2.5",
    "pymunk>=6.5",
    "shapely>=2.0",
]
dev = ["pytest>=7.4"]

[tool.setuptools.packages.find]
include = ["ewjepa*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
